Fix: Upcoming Events - "Block" theme shows popup sessions in white text (not visible) #321

--- a/themes/block.designers/css/style.css
+++ b/themes/block.designers/css/style.css
@@ -1273,7 +1273,6 @@ body.arlo {
     margin-top: .5em;
     padding-bottom: .5em;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    color: rgba(255,255,255,.5);
 }
 
 .arlo .arlo_session:last-child {
